css/style.css
/* ... */
@media (max-width: 992px) {
    .container,
    .container__section {
        max-width: 100%;
    }

    /* -------------------------------------------------
	    Sidebar
       ------------------------------------------------- */
    .sidebar {
        display: none;
    }

    /* -------------------------------------------------
        Answer
       ------------------------------------------------- */
    .answer__list li::before {
        margin-top: 5px;
    }

    /* -------------------------------------------------
        Popup
       ------------------------------------------------- */
    .popup__content {
        width: 90%;
    }

    /* -------------------------------------------------
	    Page №1: Order description
       ------------------------------------------------- */
    .one-time-offer {
        width: 90%;
        font-size: 36px;
        background-color: #febb03;
        position: relative;
    }

    .one-time-offer::before,
    .one-time-offer::after {
        content: '';
        position: absolute;
        top: 0;
        border-width: 35.5px 20px;
        border-style: solid;
        z-index: -1;
    }

    .one-time-offer::before {
        left: -30px;
        border-color: #fdba02 #fdba02 #fdba02 transparent;
    }

    .one-time-offer::after {
        right: -30px;
        border-color: #fdba02 transparent #fdba02 #fdba02;
    }

    .one-time-offer ~ span:nth-child(2) {
        padding: 0;
    }

    /* -------------------------------------------------
	    Page №2: Need know
       ------------------------------------------------- */
    .need-know .one-time-offer {
        font-size: 22px;
        padding-left: 10px;
        padding-right: 10px;
    }

    .need-know .one-time-offer::before,
    .need-know .one-time-offer::after {
        z-index: 1;
    }

    /* -------------------------------------------------
	    Page №2: Offer
       ------------------------------------------------- */
    .offer-arrows-img {
        width: 600px;
    }

    .offer .one-time-offer {
        padding-top: 10px;
        padding-bottom: 10px;
        margin-bottom: 50px;
    }

    .offer .one-time-offer::before,
    .offer .one-time-offer::after {
        border-width: 46px 20px;
    }

    .offer h2,
    .offer h3,
    .offer span:nth-child(6) {
        padding: 0;
    }

    /* -------------------------------------------------
        Page №3: Banner
       ------------------------------------------------- */
    .page-third-banner h1,
    .page-third-banner h1 span,
    .page-third-banner h1 img {
        display: block;
    }

    .page-third-banner h1 img {
        margin: 20px auto;
    }

    /* -------------------------------------------------
        Page №3: Offer
       ------------------------------------------------- */
    .page-third-offer .one-time-offer {
        z-index: 10;
    }

    .page-third-offer span:nth-child(5) {
        padding: 0;
    }

    /* -------------------------------------------------
        Page №4: Banner
       ------------------------------------------------- */
    .page-fourth-banner::before,
    .page-fourth-banner::after {
        top: 0;
        width: 20%;
    }
}
/* ... */

